--- a/galois/input/2-extensiones.tex
+++ b/galois/input/2-extensiones.tex
@@ -336,7 +336,7 @@ En ocasiones querremos saber como extender un isomorfismo de cuerpos a una exten
         Como $n$ es impar sabemos que $\alpha^2 \in K(\alpha)$ y por tanto $K(\alpha^2) = K(\alpha)$.\\
 
         \item Sea $K \subseteq L_1, L_2 \subseteq E$ dos cuerpos intermedios de grado coprimos sobre $K$ demuestra que $L_1 \cap L_2 = K$.\\\\
-        Se considera el cuerpo $L_1 \cap L_2$. Sea $d = |L_1 \cap L_2 / K$, $n = |L_1/K|$ y $m=|L_2/K$. Entonces por el teorema \ref{thm:transgr}, $d \divides n$ y $d \divides m$ con $n, m$ coprimos, por tanto $d = 1$ y $\L_1 \cap L_2 = K$.
+        Se considera el cuerpo $L_1 \cap L_2$. Sea $d = |L_1 \cap L_2 / K$, $n = |L_1/K|$ y $m=|L_2/K$. Entonces por el teorema \ref{thm:transgr}, $d \divides n$ y $d \divides m$ con $n, m$ coprimos, por tanto $d = 1$ y $L_1 \cap L_2 = K$.
     \end{enumerate}
 \end{ex}
 
